fix: status prompt dark mode styles

--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -72,6 +72,11 @@
         color: lighten(@color-text-primary, 2.5%);
       }
     }
+    .infinite-loading-container {
+      .infinite-status-prompt {
+        color: darken(@color-text-primary, 2.5%) !important;
+      }
+    }
   }
 }
 
