--- a/src/styles/rank/rank.less
+++ b/src/styles/rank/rank.less
@@ -137,6 +137,11 @@
       }
     }
   }
+  .infinite-loading-container {
+    .infinite-status-prompt {
+      color: darken(@color-text-primary, 2.5%) !important;
+    }
+  }
 }
 
 /* Popover */
